// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateLockFile catches errors 1`] = `
Array [
  Object {
    "cmd": "pnpm install --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;

exports[`generateLockFile finds pnpm globally 1`] = `
Array [
  Object {
    "cmd": "pnpm install --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;

exports[`generateLockFile generates lock files 1`] = `
Array [
  Object {
    "cmd": "pnpm install --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;

exports[`generateLockFile uses docker pnpm 1`] = `
Array [
  Object {
    "cmd": "docker run --rm -v \\"some-dir\\":\\"some-dir\\" -v \\"some-cache-dir\\":\\"some-cache-dir\\" -e NPM_CONFIG_CACHE -e npm_config_store -w \\"some-dir\\" renovate/pnpm pnpm install --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;
